# political-emails

./: .gitignore  README.md  pyproject.toml
.github/workflows/: collect.yml  deploy-site.yml
config/: domain_party_mapping.csv
data/: undated.jsonl
data/2015/03/: 2015-03-25.jsonl  2015-03-27.jsonl  2015-03-28.jsonl  2015-03-29.jsonl  2015-03-30.jsonl  2015-03-31.jsonl
data/2015/04/: 2015-04-01.jsonl  2015-04-02.jsonl  2015-04-03.jsonl  2015-04-04.jsonl  2015-04-06.jsonl  2015-04-07.jsonl  2015-04-08.jsonl  2015-04-09.jsonl  2015-04-10.jsonl  2015-04-11.jsonl  2015-04-12.jsonl  2015-04-13.jsonl  2015-04-14.jsonl  2015-04-15.jsonl  2015-04-16.jsonl  2015-04-17.jsonl  2015-04-18.jsonl  2015-04-20.jsonl  2015-04-21.jsonl  2015-04-22.jsonl  2015-04-23.jsonl  2015-04-24.jsonl  2015-04-25.jsonl  2015-04-26.jsonl  2015-04-27.jsonl  2015-04-28.jsonl  2015-04-29.jsonl  2015-04-30.jsonl
data/2015/05/: 2015-05-01.jsonl  2015-05-02.jsonl  2015-05-03.jsonl  2015-05-04.jsonl  2015-05-05.jsonl  2015-05-06.jsonl  2015-05-07.jsonl  2015-05-08.jsonl  2015-05-09.jsonl  2015-05-10.jsonl  2015-05-11.jsonl  2015-05-12.jsonl  2015-05-13.jsonl  2015-05-14.jsonl  2015-05-15.jsonl  2015-05-16.jsonl  2015-05-17.jsonl  2015-05-18.jsonl  2015-05-19.jsonl  2015-05-20.jsonl  2015-05-21.jsonl  2015-05-22.jsonl  2015-05-23.jsonl  2015-05-24.jsonl  (+7 more)
plans/: 2026-04-17-dashboard-design.md  2026-04-17-dashboard-implementation.md
scripts/: build_site.py  charts.py  collect_emails.py  migrate_mbox.py  process_email.py  utils.py
state/: watermark.json
tests/: test_build_site.py  test_charts.py
(+3350 files in other folders)
