[project]
name = "political-emails"
version = "0.1.0"
description = "Incremental collection and archive of political fundraising emails"
requires-python = ">=3.12"
dependencies = [
    "html2text>=2024.2.26",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["scripts"]
testpaths = ["tests"]
